/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.papermc.io/repository/maven-public/')
    }

    maven {
        url = uri('https://oss.sonatype.org/content/groups/public/')
    }

    maven {
        url = uri('https://repo.codemc.org/repository/maven-public/')
    }

    maven {
        url = uri('https://repo.extendedclip.com/releases/')
    }

    maven {
        url = uri('https://repo.codemc.io/repository/maven-snapshots/')
    }

    maven {
        url = uri('https://repo.opencollab.dev/main/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    gradlePluginPortal()
    maven {url = uri("https://repo.papermc.io/repository/maven-public/")}
}

dependencies {
    api "net.wesjd:anvilgui:1.10.10-SNAPSHOT"
    compileOnly libs.io.papermc.paper.paper.api
    compileOnly libs.fr.xephi.authme
    compileOnly libs.me.clip.placeholderapi
    compileOnly libs.org.geysermc.geyser.api
    compileOnly libs.org.geysermc.floodgate.api
    implementation 'com.google.code.gson:gson:2.13.2'  // 请使用最新版本
}


group = 'net.chen.ll'
version = '2.2.1-Stable'
description = 'authanvillogin'
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
tasks.jar {
    manifest {
        attributes["paperweight-mappings-namespace"] = "spigot"
    }
}
// if you have shadowJar configured
tasks.shadowJar {
    manifest {
        attributes["paperweight-mappings-namespace"] = "spigot"
    }
}
